<resources>
    <string name="app_name">ScoreKeeper</string>

    <string name="addOne">+1</string>
    <string name="subtractOne">-1</string>
    <string name="name_exists">That name already exists. Pick another one.</string>
    <string name="players">Players</string>
    <string name="saveName">Save the name</string>
    <string name="enterName">Enter name…</string>
    <string name="is_current_name">It is what your current name is set as!</string>
    <string name="custom_name">Custom name</string>
    <string name="default_name">Default</string>
    <string name="prevGames">Previously Saved Games</string>
    <string name="fileExists">File name is in use.</string>
    <string name="deleteAll">Delete All Files</string>
    <string name="all_files_deleted">All Files deleted</string>

    <!-- Main Screen -->
    <string name="welcome">Welcome! Keep track of your scores.</string>
    <string name="newGame">New Game</string>
    <string name="loadGame">Load Previous Game</string>
    <string name="settings">Settings</string>

    <!-- Buttons in Game -->
    <string name="saveGame">Save Game</string>
    <string name="update">Update</string>

    <!-- Errors -->
    <string name="no_files_error">No files to delete</string>
    <string name="dialog_name_error">You must enter a name!</string>
    <string name="unable_to_add_name">Oops!</string>

    <!-- Confirmation -->
    <string name="deleteName">Do you want to delete this name?</string>
    <string name="reallyDeleteGame">Do you really want to delete this game?</string>

    <!-- Dialog -->
    <string name="change">Change name</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="save">Save</string>
    <string name="editName">Edit Name:</string>
    <string name="confirmDelete">Confirm delete</string>
    <string name="delete">Delete</string>
    <string name="createGame">Create New Game</string>
    <string name="confirmSaveGame">Do you want to save the game?</string>
    <string name="fileSaved">File Saved</string>
    <string name="nothingSaved">Nothing to save</string>

    <!-- Settings -->
    <string name="setLimitPlayer">Limit number of players</string>
    <string name="numberPlayers">Choose number of players</string>
    <string name="numberPlayers_default">25</string>
    <string name="passed_limit">Exceeded player limit.</string>
    <string name="limitPlayers">Limit Players</string>

    <string name="test_ad">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_id">ca-app-pub-9900969335908783/9084231153</string>

    <string-array name="numberOfPlayers">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>25</item>
        <item>50</item>
        <item>100</item>
    </string-array>
</resources>
