<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
            android:padding="@dimen/layout_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/enterPlayerName"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/enterName"
                android:gravity="bottom|fill_horizontal"
                android:inputType="textCapSentences"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

        <ImageButton
                android:id="@+id/addNames"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_input_add"
                android:contentDescription="@string/saveName"/>
    </LinearLayout>

    <TextView
            android:text="@string/players"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="center"/>

    <ListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
</LinearLayout>