<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:orientation="vertical"
              tools:context=".MainActivity">

    <TextView
            android:text="@string/welcome"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:padding="@dimen/abc_edit_text_inset_horizontal_material"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:padding="@dimen/layout_padding">

        <Button
                android:id="@+id/createGame"
                android:text="@string/newGame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                style="?android:attr/buttonBarButtonStyle"
                android:textColor="@color/black"
                android:gravity="center"/>

        <Button
                android:id="@+id/loadGame"
                android:text="@string/loadGame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                style="?android:attr/buttonBarButtonStyle"
                android:textColor="@color/black"
                android:gravity="center"/>

        <Button
                android:id="@+id/settings"
                android:text="@string/settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                style="?android:attr/buttonBarButtonStyle"
                android:textColor="@color/black"
                android:gravity="center"/>
    </LinearLayout>

</LinearLayout>
